// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render disabled dropdown 1`] = `
<div
  class="dropdown"
>
  <button
    class="button"
    disabled=""
    value="Click to open"
  >
    <span
      class="label"
    >
      Click to open
    </span>
    <span
      aria-label="chevron-down"
      class="dropdownIcon fa fa-chevron-down"
    />
  </button>
</div>
`;

exports[`Render dropdown 1`] = `
<div
  class="dropdown"
>
  <button
    class="button"
    value="Click to open"
  >
    <span
      class="label"
    >
      Click to open
    </span>
    <span
      aria-label="chevron-down"
      class="dropdownIcon fa fa-chevron-down"
    />
  </button>
</div>
`;

exports[`Render dropdown with a different size 1`] = `
<div
  class="dropdown small"
>
  <button
    class="button small"
    value="Click to open"
  >
    <span
      class="label"
    >
      Click to open
    </span>
    <span
      aria-label="chevron-down"
      class="dropdownIcon fa fa-chevron-down"
    />
  </button>
</div>
`;

exports[`Render dropdown with a prepended icon 1`] = `
<div
  class="dropdown"
>
  <button
    class="button"
    value="Click to open"
  >
    <span
      aria-label="floppy-o"
      class="icon fa fa-floppy-o"
    />
    <span
      class="label"
    >
      Click to open
    </span>
    <span
      aria-label="chevron-down"
      class="dropdownIcon fa fa-chevron-down"
    />
  </button>
</div>
`;

exports[`Render loading dropdown 1`] = `
<div
  class="dropdown"
>
  <button
    class="button"
    value="Click to open"
  >
    <div
      class="spinner loader"
      style="width:40px;height:40px;"
    >
      <div
        class="doubleBounce1"
      />
      <div
        class="doubleBounce2"
      />
    </div>
    <span
      class="label"
    >
      Click to open
    </span>
    <span
      aria-label="chevron-down"
      class="dropdownIcon fa fa-chevron-down"
    />
  </button>
</div>
`;
